# copier-web-vue

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  copier.yml  pyproject.toml
.github/workflows/: test.yml
copier/: jinja_extensions.py  settings.yml
copier/questions/: copyright.yml  docker.yml  features.yml  node.yml  project.yml  vcs.yml
template/: README.md.jinja  index.html.jinja  package.json.jinja  vite.config.ts  {% if copyright_license == 'BSD-3-Clause' %}LICENSE{% endif %}.jinja  {% if copyright_license == 'MIT' %}LICENSE{% endif %}.jinja
template/.github/workflows/: test.yml.jinja
template/src/: main.ts.jinja
tests/: test_template.py
